--- a/kubernetes-manifests/java/rollout.yaml
+++ b/kubernetes-manifests/java/rollout.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: hello-world
 spec:
-  replicas: 1
+  replicas: 3
   revisionHistoryLimit: 2
   selector:
     matchLabels:
@@ -11,10 +11,15 @@ spec:
   strategy:
     canary:
       steps:
+        - setWeight: 20
         - pause: { duration: 1m }
+        - setWeight: 20
         - pause: { duration: 1m }
+        - setWeight: 20
         - pause: { duration: 1m }
+        - setWeight: 20
         - pause: { duration: 1m }
+        - setWeight: 20
         - pause: { duration: 1m }
   template:
     metadata:
