--- a/shared-kustomize-bases/java/prod/rollout.yaml
+++ b/shared-kustomize-bases/java/prod/rollout.yaml
@@ -10,16 +10,16 @@ spec:
       app: hello-world
   strategy:
     canary:
+      canaryService: hello-world-canary
+      stableService: hello-world-stable
       steps:
         - setWeight: 20
         - pause: { duration: 1m }
-        - setWeight: 20
+        - setWeight: 40
         - pause: { duration: 1m }
-        - setWeight: 20
+        - setWeight: 60
         - pause: { duration: 1m }
-        - setWeight: 20
-        - pause: { duration: 1m }
-        - setWeight: 20
+        - setWeight: 80
         - pause: { duration: 1m }
   template:
     metadata:
