--- a/shared-kustomize-bases/java/prod/rollout.yaml
+++ b/shared-kustomize-bases/java/prod/rollout.yaml
@@ -10,8 +10,8 @@ spec:
       app: hello-world
   strategy:
     canary:
-      canaryService: hello-world-canary
-      stableService: hello-world-stable
+      canaryService: canary
+      stableService: stable
       steps:
         - setWeight: 20
         - pause: { duration: 1m }
