remove unused resources

--- a/shared-kustomize-bases/java/non-prod/kustomization.yaml
+++ b/shared-kustomize-bases/java/non-prod/kustomization.yaml
@@ -1,9 +1,6 @@
 resources:
-  - svc-rollouts-canary.yaml
-  - svc-rollouts-stable.yaml
-  - svc-hello.yaml
+  - svc.yaml
   - rollout.yaml
-  - vsvc-rollouts.yaml
 
 configurations:
   - https://argoproj.github.io/argo-rollouts/features/kustomize/rollout-transform.yaml
